--- a/src/index.scss
+++ b/src/index.scss
@@ -285,6 +285,10 @@ button,
 
 // ----------- component styles ---------
 
+.productCard {
+  position: relative;
+}
+
 .underHeader {
   padding-top: 73px;
   width: 100%;
@@ -304,14 +308,10 @@ button,
 }
 
 #price-range {
-  margin: 16px 0;
+  margin-top: 16px;
   padding: 0;
   justify-content: center;
   height: 28px;
-
-  @media screen and (min-width: 834px) and (max-width: 1439px) {
-    margin: 16px 0 24px;
-  }
 
   & > div {
     gap: 0;
