--- a/src/components/header/SearchBar/SearchBar.module.scss
+++ b/src/components/header/SearchBar/SearchBar.module.scss
@@ -1,12 +1,9 @@
 .searchBox {
   position: relative;
   margin-right: 0;
-  width: 100%;
+  flex-grow: 1;
   display: flex;
 
-  @media screen and (min-width: 834px) {
-    width: auto;
-  }
   @media screen and (min-width: 1440px) {
     margin-right: 134px;
   }
